Issue 198: Using different thumbnail widths causes incorrect spacing in thumbnail slider Issue 209: url+querystring not kept intact as image src Issue 201: Div injection Issue 191: Handling 404 errors on new Asset.image in _preload

--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -6,7 +6,7 @@ License:
 	MIT-style license.
 
 Copyright:
-	Copyright (c) 2008 [Aeron Glemann](http://www.electricprism.com/aeron/).
+	Copyright (c) 2011 [Aeron Glemann](http://www.electricprism.com/aeron/).
 	
 HTML:
 	<div class="slideshow">
@@ -75,7 +75,7 @@ Notes:
 .slideshow {
 	height: auto; margin: 0 auto; width: 400px;
 }
-.slideshow a img {
+.slideshow img {
 	border: 0;
 }
 
@@ -118,9 +118,6 @@ Notes:
 .slideshow-controller {
 	background: url(controller.png) no-repeat; height: 48px; left: 50%; margin: -24px 0 0 -122px; overflow: hidden; position: absolute; top: 50%; width: 244px; z-index: 10000;
 }
-.slideshow-controller * {
-	margin: 0; outline: none; padding: 0;
-}
 .slideshow-controller-hidden { 
 	opacity: 0;
 }
@@ -128,13 +125,13 @@ Notes:
 	opacity: 1;
 }
 .slideshow-controller a {
-	background: url(controller-controls.png) no-repeat -47px 0; cursor: pointer; display: block; height: 18px; left: 112px; overflow: hidden; position: absolute; top: 15px; width: 20px;
+	background: url(controller-controls.png) no-repeat -47px 0; cursor: pointer; display: block; height: 18px; left: 112px; margin: 0; outline: none; overflow: hidden; padding: 0; position: absolute; top: 15px; width: 20px;
 }
 .slideshow-controller a.active {
 	background-position: -47px -18px;
 }
 .slideshow-controller li {
-	list-style: none;
+	list-style: none; margin: 0; padding: 0; 
 }			 
 .slideshow-controller li.first a {
 	background-position: 0 0; left: 36px; width: 19px;
@@ -204,20 +201,20 @@ Notes:
 .slideshow-thumbnails {
 	bottom: -55px; height: 55px; left: 0; position: absolute; width: 100%;
 }
-.slideshow-thumbnails * {
-	margin: 0; padding: 0;
-}
-.slideshow-thumbnails li {
-	float: left; list-style: none;
-}
 .slideshow-thumbnails a {
-	display: block; float: left; outline: none; margin: 5px 5px 0 0; padding: 5px;
+	display: block; float: left; outline: none; margin: 0; padding: 5px;
 }
 .slideshow-thumbnails a:hover {
 	background-color: #FF9 !important; opacity: 1 !important;
 }
 .slideshow-thumbnails img {
-	display: block;
+	float: left; margin: 0; padding: 0;
+}
+.slideshow-thumbnails li {
+	float: left; list-style: none; margin: 0 5px 0 0; padding: 0;
+}
+.slideshow-thumbnails ul {
+	margin: 0; padding: 0;
 }
 .slideshow-thumbnails-hidden {
 	background-color: #FFF; opacity: 0;
